--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,19 @@
     <title>Trello</title>
   </head>
   <body>
+    <header>
+      <nav class="transparent z-depth-1">
+        <div class="nav-wrapper">
+          <a href="#" class="brand-logo center"
+            ><img
+              class="responsive-image"
+              src="./assets/Logo/Gwen_logo-trello.png"
+              alt="No Image Found"
+          /></a>
+        </div>
+      </nav>
+    </header>
+
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./index.js"></script>
