--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <title>Trello</title>
   </head>
   <body>
+  
     <header>
       <nav class="transparent z-depth-1">
         <div class="nav-wrapper">
@@ -34,8 +35,43 @@
       </nav>
     </header>
 
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./index.js"></script>
-  </body>
+    <section class="margin-box card-section">
+      <div class="row center">
+        <div class="col s12">
+          <div class="card large blue darken-3">
+            <div class="card-content white-text">
+              <span class="card-title">Todos</span>
+              <div class="row">
+                  <form class="col s6 offset-s3">
+                    <div class="row">
+                      <div class="input-field col s6 m12">
+                          <input id="todo" type="text" class="validate white-text">
+                          <label for="todo">Add a new Checklist</label>
+                      </div>
+                    </div>
+                  </form>
+            </div>
+            <div class="checklist-collection">
+              <ul class="collection">
+                  <li class="collection-item red accent-3"> 
+                      <p>
+                          <label class="centre">
+                            <input type="checkbox" class="filled-in checkbox-blue-grey" />
+                            <span>Alvin</span>
+                          </label>
+                        </p>
+                        <a class="btn-floating btn-small waves-effect waves-light blue darken-4"><i class="material-icons">clear</i></a>
+                  </li>
+                  
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+     <!-- Compiled and minified JavaScript -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+      <script src="./index.js"></script>
+    </body>
 </html>
