--- a/public/index.html
+++ b/public/index.html
@@ -38,14 +38,14 @@
     <section class="margin-box card-section">
       <div class="row center">
         <div class="col s12">
-          <div class="card large blue darken-3">
+          <div class="card large blue darken-2">
             <div class="card-content white-text">
               <span class="card-title">Todos</span>
               <div class="row">
                   <form class="col s6 offset-s3">
                     <div class="row">
                       <div class="input-field col s6 m12">
-                          <input id="todo" type="text" class="validate white-text">
+                          <input id="todo" type="text" class="validate white-text" autocomplete="off">
                           <label for="todo">Add a new Checklist</label>
                       </div>
                     </div>
