--- a/public/index.html
+++ b/public/index.html
@@ -61,8 +61,7 @@
                           </label>
                         </p>
                         <a class="btn-floating btn-small waves-effect waves-light blue darken-4"><i class="material-icons">clear</i></a>
-                  </li>
-                  
+                  </li> 
               </ul>
             </div>
           </div>
@@ -72,6 +71,7 @@
 
      <!-- Compiled and minified JavaScript -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-      <script src="./index.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+     <script src="./index.js"></script>
     </body>
 </html>
