--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,17 @@
                   </form>
             </div>
             <div class="checklist-collection">
+              <div class="preloader-wrapper big active">
+                  <div class="spinner-layer spinner-red-only">
+                    <div class="circle-clipper left">
+                      <div class="circle"></div>
+                    </div><div class="gap-patch">
+                      <div class="circle"></div>
+                    </div><div class="circle-clipper right">
+                      <div class="circle"></div>
+                    </div>
+                  </div>
+              </div>
             </div>
           </div>
         </div>
