Made Changes in CSS and added background

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <section class="margin-box card-section">
       <div class="row center">
         <div class="col s12">
-          <div class="todo-card card large blue darken-2">
+          <div class="todo-card card large blue accent-4 hoverable">
             <div class="card-content white-text">
               <span class="card-title">Todos</span>
               <div class="row">
@@ -46,7 +46,7 @@
                     <div class="row">
                       <div class="input-field col s6 m12">
                           <input id="todo" type="text" class="addCheckItem validate white-text" autocomplete="off">
-                          <label for="todo">Add a new Checklist</label>
+                          <label for="todo">Add a new checklist</label>
                       </div>
                     </div>
                   </form>
