Added textarea to the html

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <section class="margin-box card-section">
       <div class="row center">
         <div class="col s12">
-          <div class="todo-card card large blue accent-4 hoverable">
+          <div class="todo-card card large indigo accent-4 hoverable">
             <div class="card-content white-text">
               <span class="card-title">Todos</span>
               <div class="row">
@@ -52,17 +52,6 @@
                   </form>
             </div>
             <div class="checklist-collection">
-              <div class="preloader-wrapper big active">
-                  <div class="spinner-layer spinner-red-only">
-                    <div class="circle-clipper left">
-                      <div class="circle"></div>
-                    </div><div class="gap-patch">
-                      <div class="circle"></div>
-                    </div><div class="circle-clipper right">
-                      <div class="circle"></div>
-                    </div>
-                  </div>
-              </div>
             </div>
           </div>
         </div>
