Removed .then and used async await everywhere

--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,8 @@
                     </div>
                   </form>
             </div>
+
+            <!-- The collection holding the checklist items -->
             <div class="checklist-collection">
                 <div class="preloader-wrapper big active">
                     <div class="spinner-layer spinner-red-only">
@@ -72,6 +74,8 @@
      <!-- Compiled and minified JavaScript -->
      <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    
+     <!-- Main JavaScript function -->
      <script src="./index.js"></script>
     </body>
 </html>
